Fixed safari image cropper styling on user prof

--- a/assets/css/userProfile.css
+++ b/assets/css/userProfile.css
@@ -454,4 +454,5 @@ button.followingButton{
  }
  .img{
      width:150px!important;
+     height:150px!important;
  }
